--- a/sass/custom/_custom.scss
+++ b/sass/custom/_custom.scss
@@ -397,6 +397,15 @@ a {
 	font-size: 3.6em;
 	margin-bottom: 0;
 
+	@media screen and ( min-width: 320px)
+	{
+		font-size: 2.0em;
+	}
+	@media screen and ( min-width: 760px )
+	{
+		font-size: 3.0em;
+	}
+
 	a {
 	  display: inline-block;
 	  color: $color-primary-0;
