--- a/style.css
+++ b/style.css
@@ -1395,27 +1395,39 @@ a {
   font-size: 3.6em;
   margin-bottom: 0;
 }
-/* line 400, sass/custom/_custom.scss */
+@media screen and (min-width: 320px) {
+  /* line 394, sass/custom/_custom.scss */
+  .site-header h1 {
+    font-size: 2.0em;
+  }
+}
+@media screen and (min-width: 760px) {
+  /* line 394, sass/custom/_custom.scss */
+  .site-header h1 {
+    font-size: 3.0em;
+  }
+}
+/* line 409, sass/custom/_custom.scss */
 .site-header h1 a {
   display: inline-block;
   color: #2198f3;
   outline: none;
 }
-/* line 405, sass/custom/_custom.scss */
+/* line 414, sass/custom/_custom.scss */
 .site-header h1 a:hover, .site-header h1 a:focus, .site-header h1 a:active {
   outline: none;
 }
-/* line 410, sass/custom/_custom.scss */
+/* line 419, sass/custom/_custom.scss */
 .site-header p {
   text-align: center;
 }
-/* line 413, sass/custom/_custom.scss */
+/* line 422, sass/custom/_custom.scss */
 .site-header a {
   text-decoration: none;
   display: inline-block;
   clear: both;
 }
-/* line 418, sass/custom/_custom.scss */
+/* line 427, sass/custom/_custom.scss */
 .site-header a:before {
   content: '{';
   display: block;
@@ -1429,7 +1441,7 @@ a {
   -o-transition: all 200ms;
   transition: all 200ms;
 }
-/* line 431, sass/custom/_custom.scss */
+/* line 440, sass/custom/_custom.scss */
 .site-header a:after {
   content: '}';
   display: block;
@@ -1443,30 +1455,30 @@ a {
   -o-transition: all 200ms;
   transition: all 200ms;
 }
-/* line 444, sass/custom/_custom.scss */
+/* line 453, sass/custom/_custom.scss */
 .site-header a:hover:before {
   opacity: 1;
   right: 5%;
 }
-/* line 448, sass/custom/_custom.scss */
+/* line 457, sass/custom/_custom.scss */
 .site-header a:hover:after {
   opacity: 1;
   left: 5%;
 }
-/* line 453, sass/custom/_custom.scss */
+/* line 462, sass/custom/_custom.scss */
 .site-header ul {
   display: inline-block;
   overflow: hidden;
   margin: 0;
   padding: 0;
 }
-/* line 459, sass/custom/_custom.scss */
+/* line 468, sass/custom/_custom.scss */
 .site-header ul li {
   list-style: none;
   display: inline-block;
   float: left;
 }
-/* line 464, sass/custom/_custom.scss */
+/* line 473, sass/custom/_custom.scss */
 .site-header ul a {
   display: block;
   padding: 10px 15px;
@@ -1478,7 +1490,7 @@ a {
   margin-right: 5px;
 }
 
-/* line 476, sass/custom/_custom.scss */
+/* line 485, sass/custom/_custom.scss */
 .page-title {
   width: 45%;
   display: block;
@@ -1488,7 +1500,7 @@ a {
   color: #ddd;
 }
 
-/* line 484, sass/custom/_custom.scss */
+/* line 493, sass/custom/_custom.scss */
 .portfolio-image {
   display: table !important;
   overflow: hidden;
@@ -1497,7 +1509,7 @@ a {
   -ms-user-select: none;
   -moz-user-select: none;
 }
-/* line 492, sass/custom/_custom.scss */
+/* line 501, sass/custom/_custom.scss */
 .portfolio-image img {
   margin: 0 auto;
   display: block;
@@ -1508,7 +1520,7 @@ a {
   -moz-user-select: none;
 }
 
-/* line 502, sass/custom/_custom.scss */
+/* line 511, sass/custom/_custom.scss */
 .shadow {
   position: absolute;
   display: table;
@@ -1523,58 +1535,58 @@ a {
   -moz-user-select: none;
 }
 
-/* line 519, sass/custom/_custom.scss */
+/* line 528, sass/custom/_custom.scss */
 .hero-social {
   padding: 1em 1.52em;
   text-align: center;
 }
-/* line 523, sass/custom/_custom.scss */
+/* line 532, sass/custom/_custom.scss */
 .hero-social:hover {
   opacity: 0.8;
 }
-/* line 526, sass/custom/_custom.scss */
+/* line 535, sass/custom/_custom.scss */
 .hero-social:active {
   opacity: 1;
 }
 
-/* line 530, sass/custom/_custom.scss */
+/* line 539, sass/custom/_custom.scss */
 .icon-fb {
   background: #3b5998;
   color: #fff;
   border-bottom-left-radius: 4px;
 }
 
-/* line 535, sass/custom/_custom.scss */
+/* line 544, sass/custom/_custom.scss */
 .icon-twitter {
   background: #4099FF;
   color: #fff;
 }
 
-/* line 539, sass/custom/_custom.scss */
+/* line 548, sass/custom/_custom.scss */
 .icon-linkedin {
   background: #0077b5;
   color: #fff;
 }
 
-/* line 543, sass/custom/_custom.scss */
+/* line 552, sass/custom/_custom.scss */
 .icon-git {
   background: #333;
   color: #fff;
   border-bottom-right-radius: 4px;
 }
 
-/* line 549, sass/custom/_custom.scss */
+/* line 558, sass/custom/_custom.scss */
 .highlight {
   font-weight: 700;
 }
 
-/* line 552, sass/custom/_custom.scss */
+/* line 561, sass/custom/_custom.scss */
 .about-header {
   font-family: 'Raleway', sans-serif;
   font-weight: 300;
 }
 
-/* line 556, sass/custom/_custom.scss */
+/* line 565, sass/custom/_custom.scss */
 .top-bar {
   width: 100%;
   display: block;
@@ -1589,20 +1601,20 @@ a {
   cursor: pointer;
 }
 
-/* line 569, sass/custom/_custom.scss */
+/* line 578, sass/custom/_custom.scss */
 .entry-image {
   width: 100%;
   display: block;
   overflow: hidden;
   margin: 0;
 }
-/* line 574, sass/custom/_custom.scss */
+/* line 583, sass/custom/_custom.scss */
 .entry-image a {
   display: block;
   overflow: hidden;
   height: 30vh;
 }
-/* line 579, sass/custom/_custom.scss */
+/* line 588, sass/custom/_custom.scss */
 .entry-image a:before {
   content: '';
   display: block;
@@ -1612,7 +1624,7 @@ a {
   z-index: 9999;
   background-image: linear-gradient(to top, rgba(255, 255, 255, 0.8), rgba(0, 0, 0, 0) 100%);
 }
-/* line 589, sass/custom/_custom.scss */
+/* line 598, sass/custom/_custom.scss */
 .entry-image img {
   width: 100%;
   -webkit-transform: translateY(-50%);
@@ -1622,17 +1634,17 @@ a {
   transform: translateY(-50%);
 }
 
-/* line 598, sass/custom/_custom.scss */
+/* line 607, sass/custom/_custom.scss */
 .entry-header {
   text-align: center;
 }
-/* line 600, sass/custom/_custom.scss */
+/* line 609, sass/custom/_custom.scss */
 .entry-header .entry-title {
   font-weight: 800;
   color: #333;
 }
 
-/* line 605, sass/custom/_custom.scss */
+/* line 614, sass/custom/_custom.scss */
 .entry-figure {
   overflow: hidden;
   margin: 0;
@@ -1644,7 +1656,7 @@ a {
   -o-transition: all 200ms;
   transition: all 200ms;
 }
-/* line 616, sass/custom/_custom.scss */
+/* line 625, sass/custom/_custom.scss */
 .entry-figure:hover > .entry-figcaption {
   background: linear-gradient(to top, #000000, rgba(255, 255, 255, 0) 100%);
   -webkit-transition: all 200ms;
@@ -1654,7 +1666,7 @@ a {
   transition: all 200ms;
 }
 
-/* line 625, sass/custom/_custom.scss */
+/* line 634, sass/custom/_custom.scss */
 .entry-figcaption {
   display: block;
   position: relative;
@@ -1671,7 +1683,7 @@ a {
   transition: all 200ms;
 }
 
-/* line 640, sass/custom/_custom.scss */
+/* line 649, sass/custom/_custom.scss */
 .site-footer {
   overflow: hidden;
   background: #111;
@@ -1680,7 +1692,7 @@ a {
   margin-top: 1.52em;
   color: #f2f2f2;
 }
-/* line 648, sass/custom/_custom.scss */
+/* line 657, sass/custom/_custom.scss */
 .site-footer h2 {
   color: #fff;
 }
