--- a/sass/custom/_custom.scss
+++ b/sass/custom/_custom.scss
@@ -656,5 +656,9 @@ a {
   
   h2 {
 	color: #fff;
+	@media screen and ( min-width: 320px) and ( max-width: 768px)
+	{
+		font-size: 0.8em;
+	}
   }
 }
