--- a/sass/custom/_custom.scss
+++ b/sass/custom/_custom.scss
@@ -497,6 +497,7 @@ a {
   -webkit-user-select: none;
   -ms-user-select: none;
   -moz-user-select: none;
+  background: #E3F2FD;
   
   img {
 	margin: 0 auto;
@@ -506,6 +507,10 @@ a {
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	-moz-user-select: none;
+	@media screen and ( min-width: 320px ) and ( max-width: 768px)
+	{
+		display: none;
+	}
   }
 }
 .shadow {
@@ -524,6 +529,10 @@ a {
   -webkit-user-select: none;
   -ms-user-select: none;
   -moz-user-select: none;
+  @media screen and ( min-width: 320px) and (max-width: 768px)
+  {
+  	display: none;
+  }
 }
 .hero-social {
   padding: 1em 1.52em;
@@ -553,7 +562,15 @@ a {
   background: #333;
   color: #fff;
   border-bottom-right-radius: 4px;
-
+}
+@media screen and ( min-width: 320px ) and ( max-height: 768px)
+{
+	.icon-git {
+		border-top-right-radius: 4px;
+	}
+	.icon-fb {
+		border-top-left-radius: 4px;
+	}
 }
 .highlight {
 	font-weight: 700;
@@ -574,6 +591,10 @@ a {
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   cursor: pointer;
+  @media screen and ( min-width: 320px) and ( max-width: 768px)
+  {
+  	display: none;
+  }
 }
 .entry-image {
   width: 100%;
